deployment pipeline no setup.ps1

--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -315,6 +315,11 @@ steps:
       $alternatePSModulesURL = $modulesStagingURI
       Write-Output "alternatePSModulesURL is '$alternatePSModulesURL'"
 
+      $optionalParams = @{}
+      if ($alternatePSModulesURL) {
+          $optionalParams['alternatePSModulesURL'] = $alternatePSModulesURL
+      }
+
       try {
           $ErrorActionPreference = 'Stop'
           ipmo ./src/GuardrailsSolutionAcceleratorSetup
