deployment pipeline no setup.ps1

--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -323,7 +323,7 @@ steps:
       try {
           $ErrorActionPreference = 'Stop'
           ipmo ./src/GuardrailsSolutionAcceleratorSetup
-          Deploy-GuardrailsSolutionAccelerator -configFilePath $configFilePath -newComponents CoreComponents, CentralizedCustomerDefenderForCloudSupport, CentralizedCustomerReportingSupport -Yes:$yes.isPresent @optionalParams -verbose:$useVerbose
+          Deploy-GuardrailsSolutionAccelerator -configFilePath $configFilePath -newComponents CoreComponents, CentralizedCustomerDefenderForCloudSupport, CentralizedCustomerReportingSupport -Yes @optionalParams -verbose
       }
       catch {
           throw "Failed test deploy of solution with error: $_"
