--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -248,7 +248,8 @@ steps:
           "lighthousePrincipalDisplayName": "SSC CSPM TEAM",
           "lighthousePrincipalId": "$(lighthousePrincipalId)",
           "lighthouseTargetManagementGroupID": "mb_co",
-          "subscriptionId": "$(testSubscriptionId)"
+          "subscriptionId": "$(testSubscriptionId)",
+          "uniqueNameSuffix": "$(uniqueNameSuffix)"
         }
       '@
       Set-Content -Path $configFilePath -Value $configContent
@@ -302,7 +303,8 @@ steps:
           "lighthousePrincipalDisplayName": "SSC CSPM TEAM",
           "lighthousePrincipalId": "$(lighthousePrincipalId)",
           "lighthouseTargetManagementGroupID": "$(lighthouseTargetManagementGroupID)",
-          "subscriptionId": "$(testSubscriptionId)"
+          "subscriptionId": "$(testSubscriptionId)",
+          "uniqueNameSuffix": "$(uniqueNameSuffix)"
         }
       '@
       Set-Content -Path $configFilePath -Value $configContent
@@ -348,7 +350,7 @@ steps:
     Inline: |
       ipmo ./src/GuardrailsSolutionAcceleratorSetup
 
-      $c = Get-GSAExportedConfig -KeyVaultName gsapipe-5c060f8e -y
+      $c = Get-GSAExportedConfig -KeyVaultName gsapipe-$(uniqueNameSuffix) -y
       $config = $c.configString | ConvertFrom-Json
       
       Write-Output "Waiting for 'main' runbook job to complete (up to 5 mins)"
@@ -394,7 +396,7 @@ steps:
         If ($env:BUILD_SOURCEVERSIONMESSAGE.ToString() -notlike '*[skip_clean]*') {
           ipmo ./src/GuardrailsSolutionAcceleratorSetup
 
-          $c = Get-GSAExportedConfig -KeyVaultName gsapipe-5c060f8e -y
+          $c = Get-GSAExportedConfig -KeyVaultName gsapipe-$(uniqueNameSuffix) -y
           $config = $c.configString | ConvertFrom-Json
 
           $c | remove-gsacentralizedReportingCustomerComponents -Force
