--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -391,7 +391,7 @@ steps:
     azurePowerShellVersion: 'LatestVersion'
     pwsh: true
     Inline: |
-        If ($env:BUILD_SOURCEVERSIONMESSAGE.ToString() -notlike '*[skip_clean]*') {
+        If ($env:BUILD_SOURCEVERSIONMESSAGE.ToString() -like '*[clean]*') {
           ipmo ./src/GuardrailsSolutionAcceleratorSetup
 
           $c = Get-GSAExportedConfig -KeyVaultName gsapipe-5c060f8e -y
@@ -402,7 +402,7 @@ steps:
           $c | Remove-GSACoreResources -Force -Wait
         }
         Else {
-          Write-Output "Skipping cleanup because BUILD_SOURCEVERSIONMESSAGE contains '[skip_clean]'. `$env:BUILD_SOURCEVERSIONMESSAGE: '$env:BUILD_SOURCEVERSIONMESSAGE'"
+          Write-Output "Skipping cleanup because BUILD_SOURCEVERSIONMESSAGE does not contain '[clean]'. `$env:BUILD_SOURCEVERSIONMESSAGE: '$env:BUILD_SOURCEVERSIONMESSAGE'"
         }
   name: 'CleanUpTest'
 
