--- a/.github/workflows/check-signedmoduleversion.yml
+++ b/.github/workflows/check-signedmoduleversion.yml
@@ -6,5 +6,5 @@ jobs:
     name: 'Check signed module versions'
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout
+    - uses: actions/checkout@master
     - run: script/Check-ZippedModuleVersions.ps1
