check version workflow 4

--- a/.github/workflows/check-signedmoduleversion.yml
+++ b/.github/workflows/check-signedmoduleversion.yml
@@ -8,4 +8,4 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - run: '& $env:GITHUB_ACTION_PATH/scripts/Check-ZippedModuleVersions.ps1'
-      shell: powershell
+      shell: pwsh
