--- a/.github/workflows/ado-zip-prerelease.yml
+++ b/.github/workflows/ado-zip-prerelease.yml
@@ -41,8 +41,8 @@ jobs:
           gci env:
           git fetch
           git checkout $($env:GITHUB_HEAD_REF)
-          git config --global user.name 'Matthew Bratschun'
+          git config --global user.name 'GitHub Workflow'
           git config --global user.email 'mbratschun@microsoft.com'
           git add -A
-          git commit -am "incremented changed module versions: $(git log -1 --pretty=%B)"
+          git commit -am "zipped modules from src and replaced in psmodules: $(git log -1 --pretty=%B)"
           git push origin HEAD:$($env:GITHUB_HEAD_REF)
