pre-release pipeline - tag trigger

--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -3,14 +3,13 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-pr:
-  branches:
-    include: 
-      - main
+trigger:
+  tags:
+    include:
+    - prerelease-v1* 
 
 pool:
   vmImage: windows-latest
-
 
 parameters:
 - name: skipCleanup
