--- a/ado-signing-pipeline-development.yml
+++ b/ado-signing-pipeline-development.yml
@@ -1,12 +1,6 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# this pipeline is meant to be used for development fork branches only
 
-pr:
-  branches:
-    include: 
-      - main
+pr: none
 
 pool:
   vmImage: windows-latest
