--- a/ado-signing-pipeline-release.yml
+++ b/ado-signing-pipeline-release.yml
@@ -1,12 +1,11 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
 
-trigger:
-  tags:
+trigger: none
+
+pr: 
+  branches:
     include:
-    - v1* 
+    - releases/v*
+  drafts: false
 
 pool:
   vmImage: windows-latest
