--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -6,7 +6,21 @@
 trigger:
   tags:
     include:
-    - prerelease-v1* 
+    - prerelease-v1*
+  paths:
+    include:
+    - setup/tags.json
+    exclude:
+    - docs
+    - psmodules
+    - src
+    - tools
+
+pr: none
+#  branches:
+#    include:
+#    - prereleases/v*
+#  drafts: false
 
 pool:
   vmImage: windows-latest
