--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -59,7 +59,7 @@ steps:
     targetType: inline
     ignoreLASTEXITCODE: true
     script: |
-      $tags = ConvertFrom-Json -Path /setup/tags.json
+      $tags = Get-Content -Path /setup/tags.json | ConvertFrom-Json
 
       If ($tags.releaseVersion -notlike 'prerelease-v*') {
         Write-Error "The releaseVersion in tags.json should always start with 'prerelease-v' for a pre-release to be published. Update the tag and try again!" -ErrorAction Stop
