--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -71,8 +71,8 @@ steps:
       git config --global user.email 'mbratschun@microsoft.com'
       git fetch
       git checkout $($env:GITHUB_HEAD_REF)
-      git push --delete origin $tags.releaseVersion
-      git tag -d $tags.releaseVersion
+      #git push --delete origin $tags.releaseVersion
+      #git tag -d $tags.releaseVersion
       git tag $tags.releaseVersion
       git push origin tag $tags.releaseVersion
 
