--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -29,6 +29,7 @@ parameters:
 
 variables: 
   - group: 'GuardrailsTestDeployments - Prerelease'
+  - group: 'GitHub_PAT'
   - name: skipCleanup
     value: ${{ parameters.skipCleanup }}
   - name: skipTestDeploy
@@ -70,6 +71,8 @@ steps:
       $prereleaseTag = $tags.releaseVersion
 
       gci env:
+
+      New-Alias -Name git -Value "git -c http.extraHeader='Authorization: Basic $(PAT)'"
 
       git config --global user.name 'Matthew Bratschun'
       git config --global user.email 'mbratschun@microsoft.com'
