--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -72,7 +72,7 @@ steps:
 
       gci env:
 
-      New-Alias -Name git -Value "git -c http.extraHeader='Authorization: Basic $env:PAT_SECRET'"
+      New-Alias -Name git -Value "git -c http.extraHeader='Authorization: Basic $env:MYPAT'"
 
       git config --global user.name 'Matthew Bratschun'
       git config --global user.email 'mbratschun@microsoft.com'
