--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -72,16 +72,14 @@ steps:
 
       gci env:
 
-      New-Alias -Name git -Value "git -c http.extraHeader='Authorization: Basic $env:MYPAT'"
-
       git config --global user.name 'Matthew Bratschun'
       git config --global user.email 'mbratschun@microsoft.com'
-      git fetch
+      git -c http.extraHeader="Authorization: Basic $env:MYPAT" fetch
       git checkout $($env:GITHUB_HEAD_REF)
-      git push origin :$prereleaseVersion
+      git -c http.extraHeader="Authorization: Basic $env:MYPAT" push origin :$prereleaseVersion
       git tag -d $prereleaseVersion
       git tag $prereleaseVersion
-      git push origin tag $prereleaseVersion
+      git -c http.extraHeader="Authorization: Basic $env:MYPAT" push origin tag $prereleaseVersion
 
       Write-Output ("##vso[task.setvariable variable=prereleaseTag;isOutput=true]$prereleaseVersion")
   env:
