--- a/ado-signing-pipeline-prerelease.yml
+++ b/ado-signing-pipeline-prerelease.yml
@@ -76,12 +76,12 @@ steps:
       git config --global user.email 'mbratschun@microsoft.com'
       git -c http.extraHeader="Authorization: Basic $env:MYPAT" fetch
       git checkout $($env:GITHUB_HEAD_REF)
-      git -c http.extraHeader="Authorization: Basic $env:MYPAT" push origin :$prereleaseVersion
+      git -c http.extraHeader="Authorization: Basic $env:MYPAT" push origin :$prereleaseTag
       git tag -d $prereleaseVersion
       git tag $prereleaseVersion
-      git -c http.extraHeader="Authorization: Basic $env:MYPAT" push origin tag $prereleaseVersion
+      git -c http.extraHeader="Authorization: Basic $env:MYPAT" push origin tag $prereleaseTag
 
-      Write-Output ("##vso[task.setvariable variable=prereleaseTag;isOutput=true]$prereleaseVersion")
+      Write-Output ("##vso[task.setvariable variable=prereleaseTag;isOutput=true]$prereleaseTag")
   env:
     PAT_SECRET: $(PAT)
 
