--- a/ado-signing-pipeline-release.yml
+++ b/ado-signing-pipeline-release.yml
@@ -1,5 +1,16 @@
+trigger:
+  tags:
+    include:
+    - v1*
+  paths:
+    include:
+    - setup/tags.json
+    exclude:
+    - docs
+    - psmodules
+    - src
+    - tools
 
-trigger: none
 pr: none
 
 pool:
