--- a/setup/config.json
+++ b/setup/config.json
@@ -18,5 +18,6 @@
   "lighthouseServiceProviderTenantID": "",
   "lighthousePrincipalDisplayName": "",
   "lighthousePrincipalId": "",
-  "lighthouseTargetManagementGroupID": ""
+  "lighthouseTargetManagementGroupID": "",
+  "healthRetentionDays": "730"
 }
