initial commit cloud usage profiles

--- a/setup/config.json
+++ b/setup/config.json
@@ -19,5 +19,6 @@
   "lighthousePrincipalDisplayName": "",
   "lighthousePrincipalId": "",
   "lighthouseTargetManagementGroupID": "",
-  "securityRetentionDays": "730"
+  "securityRetentionDays": "730",
+  "cloudUsageProfiles": "default"
 }
