--- a/ado-signing-pipeline-release.yml
+++ b/ado-signing-pipeline-release.yml
@@ -385,6 +385,13 @@ steps:
         Write-Output "'main' runbook completed successfully, checking for errors in output. "
       }
 
+      If ($jobBackend.Status -eq 'Failed') {
+        throw "backend runbook failed to execute"
+      }
+      If ($jobBackend.Status -eq 'Completed') {
+        Write-Output "'backend' runbook completed successfully, checking for errors in output. "
+      }
+
       $jobMainOutput = Get-AzAutomationJobOutput -Id $jobMain.JobId -ResourceGroupName $config.runtime.resourceGroup -AutomationAccountName $config.runtime.automationAccountName -Stream 'Error'
       $jobBackendOutput = Get-AzAutomationJobOutput -Id $jobBackend.JobId -ResourceGroupName $config.runtime.resourceGroup -AutomationAccountName $config.runtime.automationAccountName -Stream 'Error'
 
